--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "assignments",
   "version": "1.0.0",
   "description": "",
-  "main": "home.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "json-server": "^0.17.3"
   }
 }
